--- a/screen.css
+++ b/screen.css
@@ -89,6 +89,11 @@ hr {
     line-height: 1.5rem;
 }
 
+p {
+    margin-top: 0;
+    margin-bottom: 1.5rem;
+}
+
 img.screenshot {
     max-width: 100%;
     border-radius: 10px;
@@ -122,4 +127,15 @@ h5 {
     display: block;
     width: 100%;
     height: 1rem;
+}
+
+progress[value]::-webkit-progress-bar {
+    background-color: #eee;
+    border-radius: 6px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.25) inset;
+  }
+
+progress[value]::-webkit-progress-value {
+    background-color: #51bbed;
+    border-radius: 6px;
 }
