--- a/screen.css
+++ b/screen.css
@@ -40,6 +40,7 @@ html {
 }
 
 .container {
+    box-sizing: border-box;
     max-width: 800px;
     margin: 0 auto;
     background: #fff;
@@ -138,4 +139,17 @@ progress[value]::-webkit-progress-bar {
 progress[value]::-webkit-progress-value {
     background-color: #51bbed;
     border-radius: 6px;
+}
+
+footer {
+    margin: 0 auto;
+    padding: 0;
+    font-size: 13px;
+    max-width: 800px;
+    text-align: right;
+    color: #999;
+}
+
+footer > a {
+    color: #51bbed;
 }
